crates/roomrs/tests/ui/fail/database_version_zero.stderr
error: versionмқҖ 1 мқҙмғҒмқҙм–ҙм•ј н•©лӢҲлӢӨ (0 = мӢ к·ң DB л§Ҳм»Ө)
  --> tests/ui/fail/database_version_zero.rs:12:1
   |
12 | struct Db;
   | ^^^^^^
